<resources>
    <string name="app_name">LifePlanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LifePlanner</string>
    <string name="nav_header_subtitle">Making your life easier</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_utilsubs">Utilities/Subscriptions</string>
    <string name="menu_addutilsubs">Add Utilities/Subscriptions</string>
    <string name="menu_updateutilsubs">Update Utility/Subscription</string>

    <string name="home_second">Home Second</string>
    <string name="provider">Provider:</string>
    <string name="deadline">Deadline (PayDate on each month):</string>
    <string name="amount">Amount:</string>
    <string name="add_utility_subscription">Add Utility/Subscription</string>
    <string name="only_numbers_accepted">Only numbers accepted!!</string>
    <string name="birthdays">Birthdays</string>
    <string name="person_name">Person name:</string>
    <string name="details_plans">Details/Plans:</string>
    <string name="date">Date:</string>
    <string name="planname">PlanName</string>
    <string name="details">Details:</string>
    <string name="plan">Plan:</string>
    <string name="deadline_date">Deadline/Date: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
