<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".utilsubs.utilsubsadd.AddUtilsubsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provider"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <EditText
            android:id="@+id/et_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/dim20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/only_numbers_accepted"
            android:inputType="number"
            android:textSize="@dimen/dim20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/deadline"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <NumberPicker
            android:id="@+id/nrpicker_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>