<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".bdays.bdaysadd.AddBdaysFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <EditText
            android:id="@+id/et_personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/dim20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/details_plans"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <EditText
            android:id="@+id/et_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="@dimen/dim20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <NumberPicker
                android:id="@+id/nrpicker_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <NumberPicker
                android:id="@+id/nrpicker_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>